# LoraQwen

./: .gitignore  FIM.py  README.md  augment_persona.py  convert_think.py  data_ask.py  data_create.py  data_tools.py  infer_fim.py  infer_persona.py  merge.py  merge_persona.py  persona_train.json  pyproject.toml  test_load.py  test_merge.py  test_merged.py  test_persona_prompts.py  test_persona_scale.py  test_tools.py  think_train.json  train_fim.py  train_persona.py  场景工具.md
SpringNote-Qwen3-0.6B-FIM-Persona/: config.json
data/: persona_train.jsonl  persona_train_aug.jsonl  think_train.jsonl
data/raw/: input.txt  persona_train.json  think_train.json
data/train/: persona_train_aug_v2.jsonl  think_train_v2.jsonl
images/: pipeline.drawio
infer/: infer_fim.py  merge.py  merge_persona.py
merge/: merge.py  merge_persona.py
output-qwen3-0.6-fim-v5/: README.md  adapter_config.json
output-qwen3-0.6-fim-v6/: adapter_config.json
output-qwen3-0.6-persona-v2/: README.md  adapter_config.json
output-qwen3-0.6-persona-v3/: adapter_config.json
output-qwen3-0.6-persona-v4/: adapter_config.json
output-qwen3-0.6-persona-v5/: README.md  adapter_config.json
output-qwen3-1.7-fim-v5/: adapter_config.json
output-qwen3-1.7-fim-v6/: adapter_config.json
output-qwen3-1.7-fim-v7/: README.md  adapter_config.json
output-qwen3-1.7-persona-v5/: README.md  adapter_config.json
test/: test_fim.py  test_merged.py
train/: build_all_data.py  build_fim_data.py  build_persona_data.py  build_think_data.py  build_tools_data.py  train_fim.py  train_persona.py
(+15 files in other folders)
