[project]
name = "loraqwen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "transformers>=4.51",
    "datasets>=3.0",
    "accelerate>=1.0",
    "peft>=0.14",
    "bitsandbytes>=0.45",
    "gguf>=0.14",
]

# torch 默认解析到 PyPI 的 CPU 版本，必须指定 CUDA 12.8 索引
#（Windows 本机与 Linux 服务器(A10) 共用同一 cu128 wheel 源）
[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
